--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,10 +26,8 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: npm install
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
-          prettier: true
+        run: yarn install
+      
+      - name: Run ESLint
+        run: yarn run eslint .
+    
