--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "engines": {
     "npm": ">=7.0.0",
-    "yarn": ">=1.22.0"
+    "node": ">=14.0.0"
   },
   "dependencies": {},
   "packageManager": "yarn@1.22.5"
