--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,8 +26,8 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: yarn
+        run: npm install
       
       - name: Run ESLint
-        run: yarn run eslint .
+        run: npx run eslint .
     
