--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "format": "npx prettier --write ."
+    "format": "npx prettier --write .",
+	"lint:js": "eslint ./**/*.js",
+	"lint": "npm run lint:js"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
