--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
-    "eslint-config-custom": ".",
+    "eslint-config-custom": "*",
     "postcss": "^8.4.14",
     "prettier": "latest",
     "prettier-plugin-tailwindcss": "^0.1.11",
