--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "babel-eslint": "^10.1.0",
     "eslint": "8.20.0",
     "eslint-config-custom": "*",
     "postcss": "^8.4.14",
