--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "format": "npx prettier --write .",
-    "lint:js": "eslint ./**/*.js",
+    "lint:js": "eslint ./templates/**/*.js",
     "lint-js": "npm run lint:js"
   },
   "devDependencies": {
