--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "lint-js": "npm run lint:js"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.9",
     "autoprefixer": "^10.4.7",
-    "babel-eslint": "^10.1.0",
     "eslint": "8.20.0",
     "eslint-config-custom": "*",
     "postcss": "^8.4.14",
