--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint-js": "npm run lint:js"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
     "@babel/eslint-parser": "^7.18.9",
     "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
