--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,5 +29,5 @@ jobs:
         run: npm install
       
       - name: Run ESLint
-        run: npm run lint:js
+        run: npm run lint-js
     
