--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format": "npx prettier --write .",
     "lint:js": "eslint ./templates/**/*.js",
     "lint-js": "npm run lint:js",
-    "lint-prettier": "npx prettier --check ."
+    "check": "npx prettier --check ."
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
