--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -8,7 +8,7 @@ name: Lint Code Base
 
 on:
   push:
-    branches-ignore: ["master"]
+    branches-ignore: []
   pull_request:
     branches: ["master"]
 jobs:
