--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "npm": ">=7.0.0",
     "node": ">=14.0.0"
   },
-  "packageManager": "yarn@1.22.5"
+  "packageManager": "yarn@1.22.5",
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.2"
+  }
 }
