--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "check": "npx prettier --check ."
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "autoprefixer": "^10.4.7",
     "eslint-config-custom": "*",
     "postcss": "^8.4.14",
@@ -28,7 +30,5 @@
     "node": ">=14.0.0"
   },
   "packageManager": "yarn@1.22.5",
-  "dependencies": {
-    "@tailwindcss/forms": "^0.5.2"
-  }
+  "dependencies": {}
 }
